VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc2Up.err
[8MB/455.2MB][  1%][>                                                 ][1.333MB/s]  [16MB/455.2MB][  3%][=>                                                ][1.778MB/s]  [24MB/455.2MB][  5%][==>                                               ][2MB/s]  [32MB/455.2MB][  7%][===>                                              ][2.133MB/s]  [40MB/455.2MB][  8%][====>                                             ][2.5MB/s]  [48MB/455.2MB][ 10%][=====>                                            ][2.667MB/s]  [56MB/455.2MB][ 12%][======>                                           ][2.947MB/s]  [64MB/455.2MB][ 14%][=======>                                          ][3.048MB/s]  [72MB/455.2MB][ 15%][=======>                                          ][3.273MB/s]  [80MB/455.2MB][ 17%][========>                                         ][3.333MB/s]  [88MB/455.2MB][ 19%][=========>                                        ][3.52MB/s]  [96MB/455.2MB][ 21%][==========>                                       ][3.556MB/s]  [104MB/455.2MB][ 22%][===========>                                      ][3.714MB/s]  [112MB/455.2MB][ 24%][============>                                     ][3.733MB/s]  [120MB/455.2MB][ 26%][=============>                                    ][3.871MB/s]  [128MB/455.2MB][ 28%][==============>                                   ][3.879MB/s]  [136MB/455.2MB][ 29%][==============>                                   ][3.886MB/s]  [144MB/455.2MB][ 31%][===============>                                  ][4MB/s]  [152MB/455.2MB][ 33%][================>                                 ][4MB/s]  [160MB/455.2MB][ 35%][=================>                                ][4MB/s]  [168MB/455.2MB][ 36%][==================>                               ][3.907MB/s]  [176MB/455.2MB][ 38%][===================>                              ][3.911MB/s]  [184MB/455.2MB][ 40%][====================>                             ][3.833MB/s]  [192MB/455.2MB][ 42%][=====================>                            ][3.84MB/s]  [200MB/455.2MB][ 43%][=====================>                            ][3.846MB/s]  [208MB/455.2MB][ 45%][======================>                           ][3.782MB/s]  [216MB/455.2MB][ 47%][=======================>                          ][3.724MB/s]  [224MB/455.2MB][ 49%][========================>                         ][3.672MB/s]  [232MB/455.2MB][ 50%][=========================>                        ][3.625MB/s]  [240MB/455.2MB][ 52%][==========================>                       ][3.582MB/s]  [248MB/455.2MB][ 54%][===========================>                      ][3.493MB/s]  [256MB/455.2MB][ 56%][============================>                     ][3.459MB/s]  [264MB/455.2MB][ 57%][============================>                     ][3.385MB/s]  [272MB/455.2MB][ 59%][=============================>                    ][3.317MB/s]  [280MB/455.2MB][ 61%][==============================>                   ][3.256MB/s]  [288MB/455.2MB][ 63%][===============================>                  ][3.2MB/s]  [296MB/455.2MB][ 65%][================================>                 ][3.149MB/s]  [304MB/455.2MB][ 66%][=================================>                ][3.134MB/s]  [312MB/455.2MB][ 68%][==================================>               ][3.089MB/s]  [320MB/455.2MB][ 70%][===================================>              ][3.048MB/s]  [328MB/455.2MB][ 72%][====================================>             ][3.009MB/s]  [336MB/455.2MB][ 73%][====================================>             ][3MB/s]  [344MB/455.2MB][ 75%][=====================================>            ][2.991MB/s]  [352MB/455.2MB][ 77%][======================================>           ][2.983MB/s]  [360MB/455.2MB][ 79%][=======================================>          ][2.951MB/s]  [368MB/455.2MB][ 80%][========================================>         ][2.944MB/s]  [376MB/455.2MB][ 82%][=========================================>        ][2.938MB/s]  [384MB/455.2MB][ 84%][==========================================>       ][2.954MB/s]  [392MB/455.2MB][ 86%][===========================================>      ][2.947MB/s]  [400MB/455.2MB][ 87%][===========================================>      ][2.963MB/s]  [408MB/455.2MB][ 89%][============================================>     ][2.935MB/s]  [416MB/455.2MB][ 91%][=============================================>    ][2.909MB/s]  [424MB/455.2MB][ 93%][==============================================>   ][2.884MB/s]  [432MB/455.2MB][ 94%][===============================================>  ][2.861MB/s]  [440MB/455.2MB][ 96%][================================================> ][2.839MB/s]  [448MB/455.2MB][ 98%][=================================================>][2.835MB/s]  [455.2MB/455.2MB][100%][==================================================][2.828MB/s]  [455.2MB/455.2MB][100%][==================================================][2.828MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_1170/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_1170/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
